refactor: full modularity audit fixes
Backend:
- FreeAnalysisTracker: 24h rolling TTL + 10k entry cap (was unbounded forever)
- AuthUtils: shared isAuthenticated() + establishSession() used by both controllers
- ResumeFileValidator: file validation extracted from controller into @Component
- ResumeAnalysisMapper: 17-field entity<->DTO mapping in one place
- AIService.buildPrompt: split into scoringRules/atsRules/outputSchema/jdSection/resumeSection
- ResumeController: uses FREE_LIMIT constant in error message

Frontend:
- theme.js: adds darkTokens, lightTokens groups + unified statusColor()
- constants.js: MAX_FILE_SIZE_MB, FREE_ANALYSIS_LIMIT, getOAuthUrl() — single source
- utils/reportDownload.js: HTML report generation extracted from FeedbackDisplay
- FeedbackDisplay: split into JdMatchPanel, AtsPanel, KeywordsPanel,
  SectionsChecklist, FeedbackAccordion sub-components
- TemplateGallery, HowItWorks: now use theme tokens (no hardcoded hex)
- UploadSection: uses lightTokens, MAX_FILE_SIZE constants, accent token in SVGs
- LoginPage: uses lightTokens, getOAuthUrl from constants
- App.jsx: uses darkTokens, extractErrorMessage(), FREE_ANALYSIS_LIMIT